--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Image the create the tile_images dataset are obtained from https://universe.roboflow.com/jon-chan-gnsoa/mahjong-baq4s/dataset/54 . The images that used in the tiel_images folder include all the test images and selected images from the train set. When selecting images from the train set we included the agumented versions of them to (rotation and rgb->grayscale).
+Images that create the tile_images dataset are obtained from https://universe.roboflow.com/jon-chan-gnsoa/mahjong-baq4s/dataset/54 . The images used in the our mini dataset include all the test images and selected images from the train set. When selecting images from the train set we included the agumented versions of them to (rotation and rgb->grayscale).
