--- a/project.ipynb
+++ b/project.ipynb
@@ -2,13 +2,142 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bee81a7d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cv2 as cv"
+    "import cv2 as cv\n",
+    "from ultralytics import YOLO\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94632374",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython import display\n",
+    "from IPython.display import display, Image\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16fa76bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torchvision\n",
+    "print(torch.__version__)\n",
+    "print(torchvision.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac56ecd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e67052",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = YOLO(\"yolov8s.pt\")\n",
+    "model.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df863ad8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = model.train(data=\"annotated/data.yaml\", epochs=60, imgsz=640)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce436b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(filename=f'runs/detect/train6/confusion_matrix.png', width=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "222b3d76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(filename=f'runs/detect/train6/results.png', width=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6dbd10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!yolo task=detect mode=val model=runs/detect/train6/weights/best.pt data=annotated/data.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54c22b55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!yolo task=detect mode=predict model=runs/detect/train6/weights/best.pt data=annotated/data.yaml source=annotated/test/images/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74756c77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for image_path in glob.glob(f'runs/detect/predict/*.jpg'):\n",
+    "    display(Image(filename=image_path, height=600))\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d590d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trained_mahjong = YOLO('runs/detect/train6/weights/best.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5886793d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results=model(source=0,show=True, conf=0.6)"
    ]
   },
   {
@@ -22,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e2733ab3",
    "metadata": {},
    "outputs": [],
@@ -35,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b9d5c19e",
    "metadata": {},
    "outputs": [],
@@ -63,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -77,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
