--- a/augment_data.ipynb
+++ b/augment_data.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "012349a9",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
     "    aug_image = image.filter(ImageFilter.BLUR)\n",
     "    aug_image = ImageEnhance.Contrast(aug_image)\n",
     "    aug_image = aug_image.enhance(0.5)\n",
-    "    aug_image.save(f\"unlabeled_data/aug_{os.path.basename(file)}\")\n",
+    "    aug_image.save(f\"active_learning/unlabeled_data/aug_{os.path.basename(file)}\")\n",
     "    "
    ]
   }
