--- a/README
+++ b/README
@@ -10,6 +10,10 @@ https://app.roboflow.com/mahjongshifu/mahjong_shifu/5
 
 **project.ipynb:** contains the code we used to train and validate the model. It includes our first version of active learning. This file also includes the code used for running the live camera feed and saving a frames of the camera feed to add to our unlabeled dataset.
 
+**Large_Model.ipynb:** contains code used to train and validate the Model Large.
+
+**validation.ipynb:** get validation results, can ignore.
+
 # Directory structure
 **active_learning:** This directory contains four subdirectories 
 
@@ -22,14 +26,17 @@ https://app.roboflow.com/mahjongshifu/mahjong_shifu/5
 
 **runs\detect:** This directory contains all the weights of the different version of our models and also contain the validation results for each of the models. Explanation of each subdirectory:
 
-* Train6_old: This is the directory for version 1 of our model
-* train: Directory for version 2 of the model
-* train2: Directory for version 3 of the model
-* train3: Directory for version 4 of the model
+* Train6_old: This is the directory for Model V1
+* train: Directory for Model V2
+* train2: Directory for Model V3
+* train3: Directory for Model V4
 * train4: Directory for a model we trained from scratch using the final version of our dataset. (This model is not included the report)
-* predict: Directory of model V1 prediction on the test split.
-* predict2: Directory of model V2 prediction on the test split.
-* predict3: Directory of model V3 prediction on the test split.
-* predict4: Directory of model V4 prediction on the test split.
+* trainLarge: Directory for Model Large
+* predict: Directory of Model V1 prediction on the test split.
+* predict2: Directory of Model V2 prediction on the test split.
+* predict3: Directory of Model V3 prediction on the test split.
+* predict4: Directory of Model V4 prediction on the test split.
+* predictLarge: Directory of Model Large prediction on the test split.
+* valLarge: Directory of Model Large validation on the test split
 
 **tile_images:** This directory can be ignored. It was originally used to store the first version of our dataset that can be found on Roboflow
